fixed footer icon spacing

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -528,8 +528,9 @@ body {
   font-size: 1.6rem;
 }
 .services__button {
-  height: 50px;
-  width: 50px;
+  height: 5rem;
+  width: 5rem;
+  padding: 2rem;
   background-color: #244629;
   border-radius: 50%;
   display: flex;
@@ -710,12 +711,15 @@ body {
   width: 100%;
   height: 100%;
 }
-.footer__rectangles-container > *:not(:last-child) {
+.footer__icons-container > *:not(:last-child) {
   margin-right: 1.5rem;
 }
 .footer__icons {
   color: #fff;
   font-size: 20px;
+}
+.footer__address-container {
+  margin-top: 1.5rem;
 }
 .footer__address-details {
   font-size: 1.4rem;
