--- a/src/styles/sass/layout/_footer.scss
+++ b/src/styles/sass/layout/_footer.scss
@@ -35,7 +35,7 @@
     height: 100%;
   }
 
-  &__rectangles-container {
+  &__icons-container {
     & > *:not(:last-child) {
       margin-right: 1.5rem;
     }
@@ -44,6 +44,10 @@
   &__icons {
     color: $color-white;
     font-size: 20px;
+  }
+
+  &__address-container {
+    margin-top: 1.5rem;
   }
 
   &__address-details {
